fix logo margin and add wrap to clients

--- a/css/styles..css
+++ b/css/styles..css
@@ -116,6 +116,46 @@ body {
 
 /* HEADER-NAVIGATION */
 
+.header {
+  border-bottom: 1px solid var(--header-border-bottom);
+  align-content: center;
+}
+
+.header-container {
+  display: flex;
+  align-items: stretch;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+}
+
+.nav-item:last-child {
+  margin-right: 0px;
+}
+
+.nav-item {
+  margin-right: 50px;
+}
+
+.nav-item-link {
+  display: block;
+  color: var(--nav-link-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
 .web {
   color: var(--accent-color);
 }
@@ -132,50 +172,11 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+}
+
+.logo {
+  margin-right: 0;
   margin-right: 93px;
-}
-
-.header {
-  border-bottom: 1px solid var(--header-border-bottom);
-  /* height: 80px; */
-
-  align-content: center;
-}
-
-.header-container {
-  display: flex;
-  /* height: 100%; */
-  align-items: stretch;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.nav-list {
-  display: flex;
-  align-items: center;
-}
-
-.nav-item-link {
-  display: block;
-  color: var(--nav-link-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  /* height: 100%; */
-
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-.nav-item:last-child {
-  margin-right: 0px;
-}
-
-.nav-item {
-  margin-right: 50px;
 }
 
 .nav-item-link:hover,
@@ -470,17 +471,24 @@ body {
 
 .clients-list {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   flex-wrap: wrap;
+
+  margin-left: -30px;
+  margin-top: -30px;
 }
 .clients-list-item {
   width: 170px;
   height: 92px;
+
+  margin-left: 30px;
+  margin-top: 30px;
+  flex-basis: calc(100% / 6 - 30px);
 }
 
-.clients-list-item + .clients-list-item {
+/* .clients-list-item + .clients-list-item {
   margin-left: 30px;
-}
+} */
 
 .clients-list-link {
   width: 100%;
